--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 非常感谢
             </p>
             
-            <p>项目托管与 <a href="https://github.com/zhubangbang/moyu-fiction-answers" target="_blank">GitHub</a> , 我的邮箱: www@zhubangbang.com 如果有更多意见，欢迎反馈</p>
+            <p>项目托管与 <a href="https://github.com/zhubangbang/moyu-fiction-answers" target="_blank">GitHub</a> ,
+                我的邮箱: www@zhubangbang.com 如果有更多意见，欢迎反馈</p>
+            <p><a href="https://zhubangbang.com/demon-novels-know-how-many-answer-machine-instructions.html" target="_blank">使用说明点这里</a></p>
         </div>
     </div>
 
