--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <script src="https://zhubangbang.com/ssl/lib/jquery/jquery-1.11.2.min.js"></script>
     <script src="https://zhubangbang.com/ssl/lib/seajs/sea.js"></script>
-    <script src="./src/problem.js"></script>
+    <script src="./src/problem.js?t=201710251306"></script>
     <script src="./config.js?t=636150667739807359" data-init="index.js"></script>    
 </body>
 </html>
