--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="list-item-wrap j-list-wrap"></ul>
         </div>
         <div class="footer">
-            <p>魔域知多少的答题器，因为题目不多，我偷懒只做了网页版，如果后期题目增加，并且影响了运行效率，会改为桌面运行文件；
+            <p>魔域知多少的答题器，因为题目不多（一共 <span class="j-total"></span> 道题目），我偷懒只做了网页版，如果后期题目增加，并且影响了运行效率，会改为桌面运行文件；
                 <span class="strong-font">如果发现没有的题目，请截图后发给我，我会更新题库；</span>
                 非常感谢
             </p>
@@ -29,6 +29,6 @@
     <script src="https://zhubangbang.com/ssl/lib/jquery/jquery-1.11.2.min.js"></script>
     <script src="https://zhubangbang.com/ssl/lib/seajs/sea.js"></script>
     <script src="./src/problem.js?t=201710251306"></script>
-    <script src="./config.js?t=636150667739807359" data-init="index.js"></script>    
+    <script src="./config.js?t=636150667739807359" data-init="index.js"></script>
 </body>
 </html>
