--- a/index.html
+++ b/index.html
@@ -3,32 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>魔域小说知多少答题器</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+    <!--<link rel="stylesheet" href="./css/reset.css">-->
+    <link rel="stylesheet" href="./css/index.css?t=2017102612201">
+    <link href="https://zhubangbang.com/ssl/mui/css/reset.css" rel="stylesheet" type="text/css">
+    <link href="https://zhubangbang.com/ssl/mui/css/atom.css" rel="stylesheet" type="text/css">
+    <link href="https://zhubangbang.com/ssl/mui/css/mui-list.css" rel="stylesheet" type="text/css">
+    <link href="https://zhubangbang.com/ssl/mui/css/mui-form.css" rel="stylesheet" type="text/css">
 </head>
 <body id="page">
     <div class="amswers-wrap">
-        <div class="search-area">
+        <!--<div class="search-area">
             <input id="search" type="text" placeholder="输入问题 / 问题拼音首字母 / 所在章节号 " class="search-input">
+        </div>-->
+        <div class="mui-form-con search-area">
+            <p class="mui-txt-muted answers-input-des">请输入问题所在的章节号</p>
+            <input id="search" class="mui-input input100" placeholder="输入问题所在章节号" autocomplete="off" type="number">
         </div>
         <div class="list-wrap">
-            <ul class="list-item-wrap j-list-wrap"></ul>
+            <ul class="mui-list list-cover box-mat j-list-wrap"></ul>
         </div>
-        <div class="footer">
+        <div class="footer mui-txt-muted mui-txt-sm">
             <p>魔域知多少的答题器，因为题目不多（一共 <span class="j-total"></span> 道题目），我偷懒只做了网页版，如果后期题目增加，并且影响了运行效率，会改为桌面运行文件；
                 <span class="strong-font">如果发现没有的题目，请截图后发给我，我会更新题库；</span>
                 非常感谢
             </p>
             
             <p>项目托管与 <a href="https://github.com/zhubangbang/moyu-fiction-answers" target="_blank">GitHub</a> ,
-                我的邮箱: www@zhubangbang.com 如果有更多意见，欢迎反馈</p>
-            <p><a href="https://zhubangbang.com/demon-novels-know-how-many-answer-machine-instructions.html" target="_blank">使用说明点这里</a></p>
+                我的邮箱: www@zhubangbang.com 如果有更多意见，欢迎反馈，
+                <a href="https://zhubangbang.com/demon-novels-know-how-many-answer-machine-instructions.html" target="_blank">使用说明点这里</a>
+            </p>
         </div>
     </div>
 
     <script src="https://zhubangbang.com/ssl/lib/jquery/jquery-1.11.2.min.js"></script>
     <script src="https://zhubangbang.com/ssl/lib/seajs/sea.js"></script>
-    <script src="./src/problem.js?t=201710251306"></script>
+    <script src="./src/problem.js?t=2017102612201"></script>
     <script src="./config.js?t=636150667739807359" data-init="index.js"></script>
 </body>
 </html>
